Added AngularModuleBundle to have all abstract services bundled at one place. Using angular sprout structure

--- a/src/Coruja/PlesyndBundle/Resources/public/app/application/application.css
+++ b/src/Coruja/PlesyndBundle/Resources/public/app/application/application.css
@@ -14,3 +14,10 @@ body {
 .choose-widget {
     margin-bottom: 10px;
 }
+
+.form input.ng-invalid.ng-dirty, .form input.ng-invalid.ng-invalid-server {
+    background-color: #FA787E;
+}
+.form input.ng-valid.ng-dirty {
+    background-color: #78FA89;
+}
