--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" ng-app="todoApp" gmanifest="/todo/cache.appcache">
+<html lang="en" ng-app="application" gmanifest="/todo/cache.appcache">
 <head>
     <meta charset="utf-8">
     <title>Todo</title>
@@ -163,25 +163,26 @@
 {% endraw %}
 
 {% javascripts
-    '@CorujaTodoBundle/Resources/public/js/lib/jquery-1.8.1.js'
-    '@CorujaTodoBundle/Resources/public/js/lib/angular/angular.js'
-    '@CorujaTodoBundle/Resources/public/js/lib/angular/angular-resource.js'
-    '@CorujaTodoBundle/Resources/public/js/lib/http-auth-interceptor.js'
-    '@CorujaTodoBundle/Resources/public/js/lib/postmessage.js'
-    '@CorujaTodoBundle/Resources/public/js/app.js'
-    '@CorujaTodoBundle/Resources/public/js/controllers.js'
-    '@CorujaTodoBundle/Resources/public/js/directives/todoBlur.js'
-    '@CorujaTodoBundle/Resources/public/js/directives/todoFocus.js'
-    '@CorujaTodoBundle/Resources/public/js/services/coruja-online-status.js'
-    '@CorujaTodoBundle/Resources/public/js/services/coruja-frame-messenger.js'
-    '@CorujaTodoBundle/Resources/public/js/directives/coruja-auth-directive.js'
-    '@CorujaTodoBundle/Resources/public/js/directives/coruja-remote-form-directive.js'
-    '@CorujaPlesyndBundle/Resources/public/js/services/coruja-message-service.js'
-    '@CorujaPlesyndBundle/Resources/public/js/directives/coruja-message-container-directive.js'
-    '@CorujaTodoBundle/Resources/public/js/services/coruja-storage.js'
-    '@CorujaTodoBundle/Resources/public/js/services/coruja-resource.js'
-    '@CorujaTodoBundle/Resources/public/js/services/todo-service.js'
-    '@CorujaTodoBundle/Resources/public/js/services/todo-list-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/lib/jquery-1.8.1.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/lib/http-auth-interceptor.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/lib/postmessage.js'
+    '@CorujaTodoBundle/Resources/public/app/application/application.js'
+    '@CorujaTodoBundle/Resources/public/app/application/configuration-service.js'
+    '@CorujaTodoBundle/Resources/public/app/todo/todo-controller.js'
+    '@CorujaTodoBundle/Resources/public/app/todo/todo-service.js'
+    '@CorujaTodoBundle/Resources/public/app/todo/todo-blur-directive.js'
+    '@CorujaTodoBundle/Resources/public/app/todo/todo-focus-directive.js'
+    '@CorujaTodoBundle/Resources/public/app/todo-list/todo-list-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-auth/coruja-auth-directive.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-frame-messenger/coruja-child-frame-messenger-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-container-directive.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-message/coruja-message-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-online-status/coruja-online-status-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
+    '@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
     output='js/compiled/todo/main.js'
 %}
 <script src="{{ asset_url }}"></script>
