--- a/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
+++ b/src/Coruja/TodoBundle/Resources/views/Todo/index.html.twig
@@ -92,11 +92,13 @@
         </div>
     </div>
     <div id="content">
+        <span ng-show="isOnline">online</span>
+        <span ng-show="!isOnline">offline</span>
         <table class="table table-striped" ng-cloak>
             <tr>
                 <th style="width: 20%">
-                    <button ng-hide="add_todo_list || activeTodoList" class="btn btn-mini" ng-click="add_todo_list = true"><i class="icon-plus"></i></button>
-                    <button ng-show="activeTodoList && !edit_todo_list" class="btn btn-mini" ng-click="edit_todo_list = true"><i class="icon-wrench"></i></button>
+                    <button ng-hide="!isOnline || add_todo_list || activeTodoList" class="btn btn-mini" ng-click="add_todo_list = true"><i class="icon-plus"></i></button>
+                    <button ng-show="isOnline && activeTodoList && !edit_todo_list" class="btn btn-mini" ng-click="edit_todo_list = true"><i class="icon-wrench"></i></button>
                 </th>
                 <th style="width: 60%">
                     <select ng-hide="add_todo_list || edit_todo_list" class="input-xlarge" ng-model="activeTodoList" ng-options="todoList.title for todoList in todoLists ">
