--- a/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
+++ b/src/Coruja/PlesyndBundle/Resources/views/Plesynd/index.html.twig
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="application" ng-controller="PlesyndCtrl" smanifest="/cache.appcache">
+
+<html lang="en" ng-app="application" ng-controller="PlesyndCtrl" {% if app.debug == false %} manifest="/cache.appcache" {% endif %}>
 <head>
     <meta charset="utf-8">
     {% raw %}<title ng-cloak>PleSynd {{online_status_string}}</title>{% endraw %}
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Personal Learning Environment with offline capabilities">
+    <meta name="author" content="Roman Sachse">
 
     <!-- Le styles -->
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css" />
-    {% stylesheets
+    {% stylesheets output='css/compiled/plesynd/main.css'
+    'http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.1/css/bootstrap.min.css'
     '@CorujaPlesyndBundle/Resources/public/app/application/application.css'
-    output='css/compiled/plesynd/main.css'
     %}
     <link rel="stylesheet" href="{{ asset_url }}"/>
     {% endstylesheets %}
@@ -159,121 +159,14 @@
         <footer>
             <p>&copy; Roman Sachse 2012</p>
         </footer>
-
     </div><!--/.fluid-container-->
 </div>
-
-<!-- Container that holds dashboard -->
-<script type="text/ng-template" id="dashboard">
-    <div class="row-fluid">
-        <div class="span6 well" >
-            <span ng-hide="workspaces.length > 0">You have no workspace. <a ng-click="addWorkspace()">Add</a> one to start</span>
-            <table ng-repeat="workspace in workspaces" class="table table-bordered table-striped table-condensed">
-                <thead>
-                <tr>
-                    <th colspan="4"><a href="#/workspace/{{workspace.id}}">{{workspace.title}}</a></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-show="filtered.length > 0">
-                    <th>#</th>
-                    <th>Widget</th>
-                    <th>Items available</th>
-                    <th>Items not synchronized</th>
-                    <th>delete Widget</th>
-                </tr>
-                <tr ng-repeat="widget in filtered = (widgets | filter:{workspace.id:workspace.id})">
-                    <td>{{ widget.position }}</td>
-                    <td>{{ widget.title }}</td>
-                    <td ng-show="widget.is_offline_compatible && widget.data">
-                        <span class="label label-info">{{ widget.data.available }}</span>
-                    </td>
-                    <td ng-show="widget.is_offline_compatible && widget.data">
-                        <span class="label " ng-class="{'label-success':widget.data.number_not_synchronized == 0, 'label-warning':widget.data.number_not_synchronized > 0}">
-                            {{ widget.data.number_not_synchronized }}
-                        </span>
-                    </td>
-                    <td colspan="2" ng-show="widget.is_offline_compatible && !widget.data">
-                        No data available, maybe not logged in?
-                    </td>
-                    <td ng-show="!widget.is_offline_compatible" colspan="2">Widget is not offline compatible</td>
-                    <td><span ng-click="deleteWidget(widget)" class="btn btn-danger">x</span></td>
-                </tr>
-                <tr ng-show="filtered.length == 0">
-                    <td colspan="5">Workspace does not have widgets</td>
-                </tr>
-                </tbody>
-            </table>
-        </div><!--/span-->
-    </div><!--/row-->
-    <div class="row-fluid"
-        <div class="span12 well">
-            <div ng-repeat="childFrame in childFrames">
-                {{ childFrame }}
-            </div>
-        </div><!--/span-->
-    </div><!--/row-->
-</script>
-
-<!-- Container that holds the different workspaces -->
-<script type="text/ng-template" id="workspaceContainer">
-    <div class="row-fluid edit-workspace" ng-show="show_edit">
-        <div class="span12 well">
-            <div class="row-fluid" style="margin-bottom:10px;">
-                <div class="span12">
-                    <span ng-hide="change_title" ng-dblclick="change_title = true"><strong>Title</strong>: {{ workspace.title }} (double-click to change)</span>
-                    <input ng-show="change_title" ng-model="workspace.title" />
-                    <button ng-show="change_title" ng-disabled="workspace.title.length == 0" class="btn btn-primary" ng-click="updateTitle()">Update Title</button>
-                </div><!--/span-->
-            </div><!--/row-->
-            <div class="row-fluid choose-widget">
-                <div class="span2">
-                    <select ng-model="widget" ng-options="widget.title for widget in availableWidgets | filter:{title:widgetTitleFilter} | filter:offlineCompatibleCheck">
-                        <option value="">-- Choose Widget --</option>
-                    </select>
-                </div><!--/span-->
-                <div class="span10">
-                    <button class="btn" ng-show="widget" ng-click="addWidgetToWorkspace(widget)">Add Widget to Workspace</button>
-                    <input ng-hide="widget" ng-model="widgetTitleFilter" placeholder="Filter Widgets"/>
-                    <div ng-hide="widget" class="btn-group">
-                        <button ng-class="{'btn-primary':!offlineCompatibleFilter}" ng-click="offlineCompatibleFilter = false" class="btn">all widgets</button>
-                        <button ng-class="{'btn-primary':offlineCompatibleFilter}" ng-click="offlineCompatibleFilter = true" class="btn">offline widgets</button>
-                    </div>
-                </div><!--/span-->
-            </div><!--/row-->
-            <div class="row-fluid">
-                <div class="span5">
-                    <table ng-show="widget" class="table table-bordered">
-                        <tbody>
-                        <tr>
-                            <td><img ng-src="{{widget.icon}}" /></td>
-                        </tr>
-                        <tr>
-                            <td>{{widget.title}}</td>
-                        </tr>
-                        <tr>
-                            <td>{{widget.description}}</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div><!--/span-->
-            </div><!--/row-->
-            <div class="row-fluid">
-                <div class="span12">
-                    <button class="btn" ng-click="deleteWorkspace()">Delete workspace</button>
-                </div><!--/span-->
-            </div><!--/row-->
-        </div><!--/span-->
-    </div><!--/row-->
-    <hr>
-</script>
-
 {% endraw %}
 
 <!-- Le javascript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-{% javascripts
+{% javascripts output='js/compiled/plesynd/main.js'
     '@CorujaAngularModuleBundle/Resources/public/app/lib/jquery-1.8.1.js'
     '@CorujaAngularModuleBundle/Resources/public/app/lib/angular.js'
     '@CorujaAngularModuleBundle/Resources/public/app/lib/angular-resource.js'
@@ -295,7 +188,6 @@
     '@CorujaAngularModuleBundle/Resources/public/app/coruja-remote-form/coruja-remote-form-directive.js'
     '@CorujaAngularModuleBundle/Resources/public/app/coruja-resource/coruja-resource-service.js'
     '@CorujaAngularModuleBundle/Resources/public/app/coruja-storage/coruja-local-storage-service.js'
-    output='js/compiled/plesynd/main.js'
 %}
 <script src="{{ asset_url }}"></script>
 {% endjavascripts %}
